i18n/zh-CN/docusaurus-plugin-content-docs/version-4.x/sql-manual/sql-functions/scalar-functions/string-functions/substring.md
---
{
    "title": "SUBSTRING",
    "language": "zh-CN",
    "description": "SUBSTRING 函数用于从字符串中提取子字符串。可以指定起始位置和长度，支持正向和反向提取。字符串中第一个字符的位置为 1。"
}
---

## 描述

SUBSTRING 函数用于从字符串中提取子字符串。可以指定起始位置和长度，支持正向和反向提取。字符串中第一个字符的位置为 1。

## 别名

SUBSTR

MID

## 语法

```sql
SUBSTRING(<str>, <pos> [, <len>])

SUBSTRING(<str> FROM <pos> [FOR <len>])
```

## 参数
| 参数 | 说明                              |
| ------- | --------------------------------- |
| `<str>` | 源字符串。类型：VARCHAR           |
| `<pos>` | 起始位置，可以为负数，起始为 1。类型：INT   |
| `<len>` | 可选参数，要提取的长度。类型：INT |

## 返回值

返回 VARCHAR 类型，表示提取的子字符串。

特殊情况：
- 如果任意参数为 NULL，返回 NULL
- 如果 pos 为 0，返回空字符串
- 如果 pos 为负数，从字符串末尾开始向前计数
- 如果 pos 超出字符串长度，返回空字符串
- 如果不指定 len，则返回从 pos 到字符串末尾的所有字符

## 示例

1. 基本用法（指定起始位置）
```sql
SELECT substring('abc1', 2);
```
```text
+-----------------------------+
| substring('abc1', 2)        |
+-----------------------------+
| bc1                         |
+-----------------------------+
```

2. 使用负数位置
```sql
SELECT substring('abc1', -2);
```
```text
+-----------------------------+
| substring('abc1', -2)       |
+-----------------------------+
| c1                          |
+-----------------------------+
```

3. 位置为 0 的情况
```sql
SELECT substring('abc1', 0);
```
```text
+----------------------+
| substring('abc1', 0) |
+----------------------+
|                      |
+----------------------+
```

4. 位置超出字符串长度
```sql
SELECT substring('abc1', 5);
```
```text
+-----------------------------+
| substring('abc1', 5)        |
+-----------------------------+
|                             |
+-----------------------------+
```

5. 指定长度参数
```sql
SELECT substring('abc1def', 2, 2);
```
```text
+-----------------------------+
| substring('abc1def', 2, 2)  |
+-----------------------------+
| bc                          |
+-----------------------------+
```

6. 使用 from 和 for
```sql
SELECT substring('foobarbar' FROM 4 FOR 3);
```
```text
+-------------------------------------+
| substring('foobarbar' FROM 4 FOR 3) |
+-------------------------------------+
| bar                                 |
+-------------------------------------+
```

7. 使用 from
```sql
SELECT substring('foobarbar' FROM 4);
```
```text
+-------------------------------+
| substring('foobarbar' FROM 4) |
+-------------------------------+
| barbar                        |
+-------------------------------+
```

8. UTF-8 特殊字符支持
```sql
SELECT substring('ṭṛì ḍḍumai test', 5, 7);
```
```text
+----------------------------------------+
| substring('ṭṛì ḍḍumai test', 5, 7)    |
+----------------------------------------+
| ḍḍumai                                 |
+----------------------------------------+
```

9. NULL 值处理
```sql
SELECT substring(NULL, 1, 3);
```
```text
+------------------------+
| substring(NULL, 1, 3)  |
+------------------------+
| NULL                   |
+------------------------+
```

10. 空字符串
```sql
SELECT substring('', 1, 3);
```
```text
+---------------------+
| substring('', 1, 3) |
+---------------------+
|                     |
+---------------------+
```

11. 使用别名MID, 且返回结果为 NULL
```sql
SELECT MID(NULL, 2);
```
```text
+--------------+
| MID(NULL, 2) |
+--------------+
| NULL         |
+--------------+
```
